--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         .loader {
             border: 4px solid #333;
-            border-top: 4px solid #d4af37; /* Emas */
+            border-top: 4px solid #d4af37;
             border-radius: 50%;
             width: 40px;
             height: 40px;
@@ -33,14 +33,8 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        .doget-text {
-            font-size: 12px;
-            letter-spacing: 2px;
-            animation: kedip 1s infinite;
-        }
-        @keyframes kedip {
-            50% { opacity: 0.5; }
-        }
+        .doget-text { font-size: 12px; letter-spacing: 2px; animation: kedip 1s infinite; }
+        @keyframes kedip { 50% { opacity: 0.5; } }
     </style>
 </head>
 <body>
@@ -48,13 +42,19 @@
     <div class="loader"></div>
 
     <div class="doget-text">
-        🐶 DOGET SECURITY CHECKING...<br><br>
-        MENGHUBUNGKAN KE SERVER INDRAMAYU CLUB...
+        🐶 DOGET MEMAKSA MASUK...<br><br>
+        JANGAN TUTUP, SEDANG MENGALIHKAN...
     </div>
 
     <p style="font-size: 10px; color: #555; margin-top: 50px;">
-        (Jika tidak masuk otomatis, <a href="tampilan.html" style="color:#fff;">KLIK DISINI</a>)
+        (Klik tulisan ini jika macet: <a href="tampilan.html" style="color:#fff; text-decoration:underline;">MASUK PAKSA</a>)
     </p>
+
+    <script>
+        setTimeout(function() {
+            window.location.href = "tampilan.html";
+        }, 3000); // Waktu 3 Detik
+    </script>
 
 </body>
 </html>
