--- a/index.html
+++ b/index.html
@@ -148,6 +148,39 @@
 <div style="text-align: center; font-size: 9px; color: #55566a; margin-bottom: 10px;">
     Sistem oleh Nur 03 | Backstage: AI Mubin & AI Kesatria
 </div>
+<div id="indramayu-header" style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
+
+    <video autoplay muted loop playsinline id="bgVideo" 
+           style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: 1;">
+        <source src="https://drive.google.com/uc?export=download&id=1LkjA-Y3na0MTGryPixMGRdR5wFX75NSa" type="video/mp4">
+    </video>
+
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4); z-index: 2;"></div>
+
+    <div style="position: relative; z-index: 3; color: white; text-align: center; top: 40%;">
+        <h1 style="text-shadow: 2px 2px 10px #000;">INDRAMAYU CLUB</h1>
+        <p>Nur 03: kurnadibewok3311@gmail.com</p>
+        
+        <button onclick="bukaSuara()" style="background: #ffcc00; color: black; border: none; padding: 10px 20px; font-weight: bold; border-radius: 5px; cursor: pointer;">
+            🔊 AKTIFKAN SUARA MAKRIFAT
+        </button>
+    </div>
+
+    <div style="position: absolute; bottom: 0; width: 100%; background: yellow; color: black; z-index: 4; padding: 5px 0; font-weight: bold;">
+        <marquee>SISTEM PIRAMIDA GUARD AKTIF - BACKUP OTOMATIS SETIAP ADZAN - NUR 08 SIAGA - </marquee>
+    </div>
+
+</div>
+
+<script>
+function bukaSuara() {
+    var v = document.getElementById("bgVideo");
+    v.muted = false; // Mematikan mute
+    v.play(); // Memastikan tetap putar
+}
+</script>
+
+    
 
 <footer>
     <marquee>📻 ADZAN OTOMATIS & MUSIK LIBE AKTIF... 🧲 DIAWASI OLEH MENTERI KEUANGAN NUR 3... 🧲 MARI MENJAGA KEJUJURAN MUTLAK...</marquee>
