--- a/index.html
+++ b/index.html
@@ -174,6 +174,39 @@ d
         <button onclick="mulaiMakrifat()" style="padding: 15px 30px; background: #ffcc00; border: none; font-weight: bold; cursor: pointer; border-radius: 50px;">
             MULAI PENJELAJAHAN 🍃
         </button>
+        <div id="container-indramayu" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; z-index: -1;">
+    
+    <iframe id="videoAlam" 
+        style="width: 100vw; height: 100vh; pointer-events: none;"
+        src="https://www.youtube.com/embed/zhLi6evK4dY?autoplay=1&mute=1&loop=1&playlist=zhLi6evK4dY&controls=0" 
+        frameborder="0">
+    </iframe>
+
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5);"></div>
+</div>
+
+<div style="position: relative; z-index: 10; text-align: center; color: white; padding-top: 30vh;">
+    <h1>INDRAMAYU CLUB</h1>
+    <p>Nur 03: kurnadibewok3311@gmail.com</p>
+    
+    <button onclick="nyalakanSuara()" style="background: #ffcc00; color: black; padding: 15px 30px; border: none; border-radius: 50px; font-weight: bold; cursor: pointer;">
+        🚀 GAS AKTIFKAN SUARA MAKRIFAT
+    </button>
+</div>
+
+<div style="position: fixed; bottom: 0; width: 100%; background: yellow; color: black; font-weight: bold; padding: 5px; z-index: 20;">
+    <marquee>ADZAN OTOMATIS & MUSIK LIVE AKTIF - NUR 08 SIAGA - PIRAMIDA GUARD - </marquee>
+</div>
+
+<script>
+function nyalakanSuara() {
+    // Memuat ulang iframe tanpa mute setelah user klik
+    var iframe = document.getElementById("videoAlam");
+    iframe.src = iframe.src.replace("mute=1", "mute=0");
+    alert("Suara Suling Alam telah diaktifkan oleh Nur.");
+}
+</script>
+
     </div>
 </div>
 
