Update welcome messages and button text in index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div style="text-align: right; font-size: 7px; color: #333; line-height: 1.2;">
             <span style="color: var(--merah);">●</span> TERKUNCI<br>ID: 774026331723964
         </div>
-        <button class="btn-game-3d" onclick="keGameOnline()">🕹️</button>
+        
     </div>
 </header>
 
@@ -252,8 +252,9 @@ d
 
 <div id="welcome-nur" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9999; display: flex; align-items: center; justify-content: center; color: white; text-align: center;">
     <div>
-        <h2 style="color: #ffcc00;">SELAMAT DATANG DI INDRAMAYU CLUB</h2>
-        <p>Nur 07 Menyapa: "Masuklah bersantai dulu..."</p>
+        <h2 style="color: #ffcc00;">WELLCOME to INDRAMAYU</h2>
+        <p>Nur 07 Menyapa: "Masuklah dengengan membaca bismillah
+            dengan tenang hati..."</p>
         <button onclick="mulaiMakrifat()" style="padding: 15px 30px; background: #ffcc00; border: none; font-weight: bold; cursor: pointer; border-radius: 50px;">
             buka youtube disini🍃
         </button>
@@ -269,7 +270,8 @@ d
 </div>
 
 <div style="position: relative; z-index: 10; text-align: center; color: white; padding-top: 30vh;">
-    <h1>SELAMAT MENIKMATI</h1>
+    <h1>keluarlah dengan mengucapkan Alhamdulillah
+        SELAMAT MENIKMATI</h1>
     <p>Nur 04: </p>
     
     <button onclick="nyalakanSuara()" style="background: #ffcc00; color: black; padding: 15px 30px; bord: none; border-radius: 50px; font-weight: bold; cursor: pointer;">
