--- a/index.html
+++ b/index.html
@@ -346,6 +346,155 @@ function mulaiMakrifat() {
         PIRAMIDA GUARD AKTIF • ADMIN UTAMA: nurindramayuaimini@gmail.com • INDRAMAYU CLUB MAKRIFAT • SISTEM SIAGA 24 JAM
     </marquee>
 </div>
+
+<style>
+    .sirkuit-folder {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+        background: rgba(0, 0, 0, 0.5); /* Transparan Gelap */
+        padding: 15px;
+        border-radius: 12px;
+        border: 1px solid rgba(255, 204, 0, 0.3);
+        margin: 10px;
+        backdrop-filter: blur(5px); /* Efek Blur di belakang folder */
+    }
+    .folder-btn {
+        text-align: center;
+        text-decoration: none;
+        color: white;
+        transition: transform 0.3s;
+    }
+    .folder-btn:hover { transform: scale(1.1); }
+    .folder-btn img { width: 40px; filter: drop-shadow(0 0 5px yellow); }
+    .folder-btn span { display: block; font-size: 10px; margin-top: 5px; font-weight: bold; }
+</style>
+
+<div class="sirkuit-folder">
+    <a href="#gudang" class="folder-btn">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png">
+        <span>GUDANG</span>
+    </a>
+    <a href="#f09" class="folder-btn">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png">
+        <span>F-09</span>
+    </a>
+    <a href="#f08" class="folder-btn">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png">
+        <span>F-08</span>
+    </a>
+    <a href="#f07" class="folder-btn">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png">
+        <span>F-07</span>
+    </a>
+</div>
+
+<div id="pelayanan-container" style="position: relative; z-index: 10; padding: 15px; max-width: 500px; margin: 0 auto;">
+    
+    <div style="background: white; border-radius: 10px; padding: 10px; border-left: 5px solid #00c3ff; color: #333; margin-bottom: 10px;">
+        <strong style="color: #0078ff;">AI indramayuCLUB silahkan bertanya 😀😀😀</strong><br>
+        <small>Pelayanan: imahazzah51@gmail.com</small>
+    </div>
+
+    <div style="background: rgba(255, 255, 255, 0.9); margin-bottom: 10px; padding: 8px; border-radius: 8px; text-align: center;">
+        <div style="color: #ffcc00; font-size: 1.2rem;">★★★★★ <span style="color: #666; font-size: 0.8rem;">(5.0)</span></div>
+    </div>
+
+    <div id="logo-pembayaran" style="display: none; background: white; padding: 15px; border-radius: 12px; margin-bottom: 10px; text-align: center; border: 2px solid #00c3ff;">
+        <div style="display: flex; justify-content: center; gap: 20px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/eb/eb/Logo_ovo_purple.svg" style="height: 30px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Logo_danaindonesia.svg" style="height: 25px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Gopay_logo.svg" style="height: 20px;">
+        </div>
+        <p style="font-size: 10px; color: red; font-weight: bold; margin-top: 5px;">SISTEM KEUANGAN SIAGA</p>
+    </div>
+
+    <div id="selasar-makrifat" style="background: rgba(0,0,0,0.85); border: 2px solid #333; border-radius: 10px; padding: 15px; color: white;">
+        <div style="display: flex; align-items: center; margin-bottom: 10px;">
+            <span id="indicator" style="margin-right: 10px; color: gray;">●</span>
+            <strong id="title-selasar" style="color: #666;">Selasar Menunggu...</strong>
+        </div>
+        <div id="status-sistem" style="font-size: 0.8rem; border-top: 1px solid #333; padding-top: 10px; color: #666;">
+            "Hanya kejujuran yang akan membukakan pintu dimensi selanjutnya."
+        </div>
+        <div style="display: flex; gap: 5px; margin-top: 10px;">
+            <input type="text" id="inputKomentar" oninput="aktifkanSelasar()" placeholder="Ketik jiwamu..." style="flex: 1; background: #222; border: 1px solid #444; color: white; padding: 8px; border-radius: 4px;">
+            <button onclick="kirimPesan()" style="background: #28a745; color: white; border: none; padding: 8px 15px; border-radius: 4px; font-weight: bold;">GAS</button>
+        </div>
+    </div>
+</div>
+
+<script>
+    function aktifkanSelasar() {
+        const val = document.getElementById('inputKomentar').value;
+        const logo = document.getElementById('logo-pembayaran');
+        const selasar = document.getElementById('selasar-makrifat');
+        const title = document.getElementById('title-selasar');
+        const indicator = document.getElementById('indicator');
+
+        if (val.length > 0) {
+            logo.style.display = 'block';
+            selasar.style.border = '2px solid #00c3ff';
+            title.style.color = '#00c3ff';
+            title.innerText = 'Selasar Makrifat Aktif';
+            indicator.style.color = '#00ff00';
+        } else {
+            logo.style.display = 'none';
+            selasar.style.border = '2px solid #333';
+            title.style.color = '#666';
+            title.innerText = 'Selasar Menunggu...';
+            indicator.style.color = 'gray';
+        }
+    }
+</script>
+
+    <style>
+    .sirkuit-container a {
+        text-align: center;
+        text-decoration: none;
+        color: white;
+        transition: all 0.3s ease; /* Durasi efek halus */
+        display: block;
+        padding: 10px;
+    }
+
+    /* Efek saat folder disentuh/hover */
+    .sirkuit-container a:hover {
+        transform: scale(1.2); /* Membesar sedikit */
+        filter: drop-shadow(0 0 10px #00c3ff); /* Bersinar biru makrifat */
+    }
+
+    .folder-icon {
+        width: 45px;
+        display: block;
+        margin: 0 auto 5px;
+        filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    }
+</style>
+
+<div class="sirkuit-container" style="background: rgba(0, 0, 0, 0.4); padding: 20px; margin: 15px; border-radius: 15px; border: 1px solid rgba(0, 195, 255, 0.2); display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; z-index: 10; position: relative; backdrop-filter: blur(5px);">
+    
+    <a href="#gudang">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" class="folder-icon">
+        <div style="font-size: 11px; font-weight: bold; color: #ffcc00;">GUDANG</div>
+    </a>
+
+    <a href="#f09">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" class="folder-icon">
+        <div style="font-size: 11px; font-weight: bold;">F-09</div>
+    </a>
+
+    <a href="#f08">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" class="folder-icon">
+        <div style="font-size: 11px; font-weight: bold;">F-08</div>
+    </a>
+
+    <a href="#f07">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" class="folder-icon">
+        <div style="font-size: 11px; font-weight: bold;">F-07</div>
+    </a>
+</div>
+
    
    </html>
 
