--- a/index.html
+++ b/index.html
@@ -136,5 +136,15 @@ function aksesFolder(id) {
 }
 </script>
 
+    <div id="nur-bg-container" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden;">
+    <iframe 
+        src="https://www.youtube.com/embed/XYFDBw0YoYg?autoplay=1&mute=1&loop=1&playlist=XYFDBw0YoYg&controls=0&rel=0&modestbranding=1" 
+        frameborder="0" 
+        style="width: 100vw; height: 56.25vw; min-height: 100vh; min-width: 177.77vh; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;">
+    </iframe>
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5);"></div>
+</div>
+
+
 </body>
 </html>
