Update chat box layout in halaman.html

--- a/halaman.html
+++ b/halaman.html
@@ -243,7 +243,7 @@
 
 
 
-<div class="chat-box">
+<div
     <div style="font-size:10px; color:#555; margin-bottom:5px;">📢 SELASAR MAKRIFAT (LIVE CHAT)</div>
 
         <input type="text" id="pesan-member" placeholder="Ketik pesan..." style="flex:1; background:#222; border:none; color:white; padding:5px; font-size:10px;">
