Update and rename index.html to mata.html

--- a/mata.html
+++ b/mata.html
@@ -118,6 +118,8 @@
     </div>
 </div>
 
+        <div
+
 <div class="selasar-section" style="margin-top: 20px;">
     <div style="color: var(--emas); font-size: 12px; margin-bottom: 8px; font-weight: bold; border-left: 3px solid var(--emas); padding-left: 10px;">
         🏛️ SELASAR MAKRIFAT & KOMENTAR
